src/objects/Apttus_DealOpti__ComparableDeal__c.object
<CustomObject>
    <description>Represents a deal comparison</description>
    <fields>
        <fullName>Apttus_DealOpti__AmountFrom__c</fullName>
        <label>Amount From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__AmountTo__c</fullName>
        <label>Amount To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__IsTheDealColor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTheDealColor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__PercentFrom__c</fullName>
        <label>Percent From</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__PercentTo__c</fullName>
        <label>Percent To</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__RelatedDealPercentileRange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Deal Percentile Range</label>
        <referenceTo>Apttus_DealMgr__DealPercentileRange__c</referenceTo>
        <relationshipLabel>Comparable Deals</relationshipLabel>
        <relationshipName>ComparableDeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__RelatedDeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Deal</label>
        <referenceTo>Apttus_DealMgr__Deal__c</referenceTo>
        <relationshipLabel>Comparable Deals</relationshipLabel>
        <relationshipName>ComparableDeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DealOpti__Sequence__c</fullName>
        <description>The display sequence</description>
        <inlineHelpText>The display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Comparable Deal</label>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comparable Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>